--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,18 +6,19 @@ stages:
 build-image:
   stage: build-image
   script:
-    - docker build -t "$CI_PROJECT_PATH_SLUG" .
+    - docker build -t ${CI_PROJECT_PATH_SLUG} .
 run-image:
   stage: run-image
   timeout: 4 hours
   script:
-    - echo "$CI_PROJECT_PATH_SLUG"
-    - nvidia-docker run --ipc=host --gpus all -v ${PWD}/output2:/app/runs "$CI_PROJECT_PATH_SLUG"
+    - echo "PROJECT:" ${CI_PROJECT_PATH_SLUG}
+    - mkdir -p ${PWD}/${CI_JOB_ID}
+    - nvidia-docker run --ipc=host --gpus all -v ${PWD}/${CI_JOB_ID}:/output ${CI_PROJECT_PATH_SLUG}
   rules:
     - if: $CI_COMMIT_BRANCH
       exists:
         - Dockerfile
   artifacts:
     paths:
-      - "output2/*"
+      - ${PWD}/${CI_JOB_ID}/*
 
