--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 build-image:
   stage: build-image
   script:
-    - sudo chown -R gitlab-runner  ${PWD}/${CI_JOB_ID}
+    - sudo chmod -R 0777 ./*
     - docker build -t ${CI_PROJECT_PATH_SLUG} .
 run-image:
   stage: run-image
