--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
 build-image:
   stage: build-image
   script:
+    - sudo ls -la
     - sudo chmod -R 0777 ./*
     - docker build -t ${CI_PROJECT_PATH_SLUG} .
 run-image:
