--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ torch==1.9.1+cu111
 torchvision==0.10.1+cu111
 tqdm>=4.41.0
 
+# App -----------------------------------------
+streamlit>=1.1.0
+
 # Logging -------------------------------------
 tensorboard>=2.4.1
 # wandb
